# design-patterns

./: Cargo.toml  README.md
adapter/src/: adaptee.rs  adapter.rs  main.rs  target.rs
bridge/src/: main.rs
bridge/src/device/: mod.rs  radio.rs  tv.rs
bridge/src/remotes/: advanced.rs  basic.rs  mod.rs
builder/car/: Cargo.toml
builder/car/src/: components.rs  director.rs  main.rs
command/: Cargo.toml
command/src/: main.rs
command/src/command/: copy.rs  cut.rs  mod.rs  paste.rs
composite/src/: main.rs
composite/src/fs/: file.rs  folder.rs  mod.rs
cor/: Cargo.toml
cor/src/: main.rs  patient.rs
cor/src/department/: cashier.rs  doctor.rs  medical.rs  mod.rs  reception.rs
decorator/src/: main.rs
facade/src/: account.rs  ledger.rs  main.rs  notificaton.rs  security_code.rs  wallet.rs  wallet_facade.rs
factory/factory-method/dialog-rendering/: Cargo.toml  README.md
factory/factory-method/maze-game/: Cargo.toml  README.md
filter/src/: main.rs  req.rs
filter/src/chain/: client.rs  mod.rs  (+1 more)
iterators/src/: main.rs  users.rs
mediator/src/: main.rs
memento/: Cargo.toml
memento/src/: conceptual.rs  main.rs
observer/src/: editor.rs  main.rs  observer.rs
prototype/src/: main.rs
proxy/src/: main.rs
simple_http_server/: 404.html  Cargo.toml  hello.html
simple_http_server/src/: main.rs
singleton/safe/: Cargo.toml
state/: Cargo.toml
state/src/: main.rs  player.rs  state.rs
strategy/: Cargo.toml
strategy/src/: functional.rs  main.rs
template/src/: main.rs
timer_future/src/: lib.rs  main.rs
visitor/src/: main.rs  visitor.rs
(+24 files in other folders)
