[workspace]
members = [
  "factory/factory-method/dialog-rendering",
  "factory/factory-method/maze-game",
  "builder/car",
  "prototype",
  "singleton/safe",
  "singleton/lazy",
  "singleton/mutex",
  "adapter",
  "cor",
  "filter",
  "command",
  "iterators",
  "mediator",
  "memento",
  "observer",
  "state",
  "strategy",
  "template",
  "visitor",
  
]
