[package]
name = "strategy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "strategy-conceptual"
path = "src/main.rs"

[[bin]]
name = "strategy-functional"
path = "src/functional.rs"



[dependencies]
